# xcube-geodb-openeo

./: .gitignore  CHANGES.md  Dockerfile  README.md  config.yml  config.yml.example  defaults.py  environment.yml  how-to-deploy.md  setup.cfg  setup.py
.github/workflows/: workflow.yaml
docker/: Dockerfile  README.md
notebooks/: credentials-example.py  geoDB-openEO_use_case_1.ipynb  geoDB-openEO_use_case_2.ipynb
tests/: mock_collections.json  test_config.yml
tests/api/: test_context.py
tests/backend/: test_catalog.py  test_context.py
tests/core/: mock_datasource.py  mock_datastore.py  mock_vc_provider.py  test_vectorcube.py
tests/res/: geojson-pop_hamburg.json  sample-process-broken.json  sample-process-spatial_extent-default-crs.json  sample-process-spatial_extent.json  sample-process.json
tests/server/app/: base_test.py  test_backend_info.py  test_backendinfo_endpoints.py  test_capabilities.py  test_data_discovery.py  test_processing.py  test_tornado.py  test_utils.py
xcube_geodb_openeo/: __init__.py  config.yml.example  defaults.py  plugin.py  version.py
xcube_geodb_openeo/api/: api.py  context.py  routes.py
xcube_geodb_openeo/backend/: backend_info.py  capabilities.py  catalog.py  processes.py
xcube_geodb_openeo/backend/res/: __init__.py  datacube-extension-schema.json  load_collection.json
xcube_geodb_openeo/core/: datasource.py  datastore.py  geodb_datasource.py  geodb_datastore.py  rastercube.py  tools.py  vectorcube.py  vectorcube_provider.py
xcube_geodb_openeo/server/: api.py  cli.py  config.py  context.py
(+13 files in other folders)
