[metadata]
name = xcube_geodb_openeo
version = attr: xcube_geodb_openeo.__version__
description = xcube Tile Server
long_description = file: README.md, CHANGES.md, LICENSE
keywords = agriculture, earth observation, ard, data cubes, xarray, xcube, geodb
license = MIT
author = xcube Team

[options]
packages = find:
install_requires = xcube >=0.11.3.dev0
